Refactor CI workflow for PR review process
Removed debug steps and updated the prompt for review input. Modified API call to use a new endpoint and adjusted extraction logic for review content.

--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,6 @@ jobs:
     permissions:
       contents: read
       pull-requests: write
-      models: read
 
     steps:
       - name: Checkout repository
@@ -29,85 +28,64 @@ jobs:
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
     
-      - name: Debug - Check if prompt file exists
-        run: |
-          echo "=== Checking prompt file ==="
-          ls -la .github/ai/ || echo "Directory doesn't exist"
-          if [ -f .github/ai/copilot-pr-review.prompt.md ]; then
-            echo "Prompt file exists"
-            cat .github/ai/copilot-pr-review.prompt.md
-          else
-            echo "ERROR: Prompt file not found!"
-          fi
-    
       - name: Build Review Input
         run: |
           if [ -f .github/ai/copilot-pr-review.prompt.md ]; then
             cat .github/ai/copilot-pr-review.prompt.md > review_input.txt
           else
-            echo "Please review the following PR changes:" > review_input.txt
+            echo "Please review the following PR changes and provide feedback:" > review_input.txt
           fi
           printf "\n\nPR DIFF:\n\n" >> review_input.txt
           cat pr.diff >> review_input.txt
 
-      - name: Debug Review Input
-        if: always()
-        run: |
-          echo "=== Review Input (first 50 lines) ==="
-          head -50 review_input.txt || echo "review_input.txt not found"
-
-      - name: Call GitHub Copilot AI (GitHub Models)
-        continue-on-error: true
+      - name: Call GitHub Models API
         run: |
           PROMPT=$(jq -Rs . < review_input.txt)
-          curl -v https://api.github.com/ai/models/gpt-4.1/invoke \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+          
+          curl -X POST https://models.inference.ai.azure.com/chat/completions \
             -H "Content-Type: application/json" \
-            -d "{\"input\": $PROMPT}" \
-            > review_output.json
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -d '{
+              "messages": [
+                {
+                  "role": "system",
+                  "content": "You are a helpful code reviewer. Provide constructive feedback on code changes."
+                },
+                {
+                  "role": "user",
+                  "content": '"$PROMPT"'
+                }
+              ],
+              "model": "gpt-4o",
+              "temperature": 0.7,
+              "max_tokens": 2000
+            }' > review_output.json
 
       - name: Debug API Response
         if: always()
         run: |
           echo "=== Full API Response ==="
-          if [ -f review_output.json ]; then
-            cat review_output.json
-            echo ""
-            echo "=== Pretty Printed ==="
-            cat review_output.json | jq '.' || echo "Invalid JSON"
-          else
-            echo "ERROR: review_output.json not found"
-          fi
+          cat review_output.json | jq '.'
 
       - name: Extract Review Text
-        if: always()
         run: |
-          if [ ! -f review_output.json ]; then
-            echo "No API response file found" > review.md
-            exit 0
-          fi
+          cat review_output.json | jq -r '.choices[0].message.content' > review.md
           
-          # Try the original path first
-          cat review_output.json | jq -r '.output[0].content[0].text' > review.md
-          
-          # If review.md is empty or null, try alternative paths
           if [ ! -s review.md ] || [ "$(cat review.md)" = "null" ]; then
-            echo "First extraction failed, trying alternative paths..."
-            cat review_output.json | jq -r '.choices[0].message.content // .output // .content // .message // .' > review.md
+            echo "Failed to extract review. API Response:" > review.md
+            cat review_output.json >> review.md
           fi
           
           echo "=== Extracted Review ==="
           cat review.md
 
       - name: Post PR Comment
-        if: always()
         run: |
-          if [ -f review.md ] && [ -s review.md ] && [ "$(cat review.md)" != "null" ]; then
-            gh pr comment ${{ github.event.pull_request.number }} --body-file review.md
+          if [ -s review.md ] && [ "$(cat review.md)" != "null" ]; then
+            gh pr comment ${{ github.event.pull_request.number}} --body-file review.md
           else
-            echo "ERROR: No valid review content found. Posting error message."
-            echo "AI PR Review failed to generate. Check workflow logs for details." | \
-              gh pr comment ${{ github.event.pull_request.number }} --body-file -
+            echo "ERROR: No valid review content"
+            exit 1
           fi
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
