--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,6 +66,17 @@ jobs:
         run: |
           echo "=== Full API Response ==="
           cat review_output.json | jq '.' || cat review_output.json
+      
+      - name: Debug - Check if prompt file exists
+        run: |
+          echo "=== Checking prompt file ==="
+          ls -la .github/ai/ || echo "Directory doesn't exist"
+          if [ -f .github/ai/copilot-pr-review.prompt.md ]; then
+            echo "Prompt file exists"
+            cat .github/ai/copilot-pr-review.prompt.md
+          else
+            echo "ERROR: Prompt file not found!"
+          fi
 
       - name: Extract Review Text
         run: |
